<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor2"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tune3"
        app:layout_constraintEnd_toEndOf="@+id/tune2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tune2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune6"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_6"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tune5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tune5"
        app:layout_constraintTop_toBottomOf="@+id/tune3"
        app:layout_constraintVertical_bias="0.651"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune5"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_5"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tune6"
        app:layout_constraintEnd_toEndOf="@+id/tune4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tune4"
        app:layout_constraintTop_toBottomOf="@+id/tune3"
        app:layout_constraintVertical_bias="0.848"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_4"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tune5"
        app:layout_constraintEnd_toEndOf="@+id/tune3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tune3"
        app:layout_constraintTop_toBottomOf="@+id/tune3"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune7"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_7"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tune6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tune6"
        app:layout_constraintTop_toBottomOf="@+id/tune6"
        app:layout_constraintVertical_bias="0.403"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/tone_button_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/tune_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tune3"
        app:layout_constraintEnd_toEndOf="@+id/tune3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tune3"
        app:layout_constraintTop_toBottomOf="@+id/tune1"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>